Fix white gap problem

--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -1,5 +1,6 @@
 .cont {
     position: relative;
+    overflow-x: hidden;
 
     width: 100%;
     height: 100%;
@@ -15,7 +16,6 @@
     width: 100vw;
     height: 100%;
     object-fit: cover;
-    overflow-x: hidden;
 
     position: relative;
 }
@@ -24,7 +24,6 @@
     width: 100vw;
     height: 100%;
     object-fit: cover;
-    overflow-x: hidden;
 
     opacity: 0;
     transform: translate(0, 25vh);
@@ -157,14 +156,12 @@
 @media (max-width: 1400px) {
     .bg-home {
         width: 100%;
-        height: 100vh;
-        overflow: hidden;
+        height: 100%;
     }
 
     .bg-390 {
         width: 100%;
-        height: 100vh;
-        overflow: hidden;
+        height: 100%;
     }
 
     .img-click {
@@ -180,11 +177,6 @@
 
 @media (max-width: 1300px) {
     .bg-home {
-        height: 100%;
-
-        object-fit: cover;
-        position: relative;
-
         opacity: 0.7;
     }
 
